--- a/testing.html
+++ b/testing.html
@@ -18,8 +18,7 @@
     <header></header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -54,172 +53,115 @@
 
     <main>
         <section>
-            <div class="container-fluid">
-                <div class="rowPrincipal row">
-                    <div class="serchVerticalL col col-2 d-none d-md-block">
-                        <form class="form" action="">
-                            <p>
-                                <h4>Filtros</h4>
-                            </p>
-                            <hr />
-                            <div class="form-group">
-                                <label for="tipo">
-                                    <p>
-                                        <h6>Tipo</h6>
-                                    </p>
-                                </label>
-                                <select class="custom-select custom-select-md">
-                                    <option selected></option>
-                                    <option value="1">Perro</option>
-                                    <option value="2">Gato</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="nombre">Nombre</label>
-                                <input type="nombre" class="form-control" id="nombre">
-                            </div>
 
-                            <div class="form-group">
-                                <label for="barrio">Barrio</label>
-                                <input type="barrio" class="form-control" id="barrio">
-                            </div>
-                            <div class="form-group">
-                                <label for="raza">Raza</label>
-                                <input type="raza" class="form-control" id="raza">
-                            </div>
-                            <div class="form-group">
-                                <label for="sexo">Sexo</label>
-                                <select class="custom-select custom-select-md">
-                                    <option selected></option>
-                                    <option value="1">Macho</option>
-                                    <option value="2">hembra</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="edad">Edad</label>
-                                <input type="edad" class="form-control" id="edad">
-                            </div>
-                            <div class="form-group">
-                                <label for="pelo">Color de pelo</label>
-                                <input type="pelo" class="form-control" id="pelo">
-                            </div>
-                            <div class="form-group">
-                                <label for="ojos">Color de ojos</label>
-                                <input type="ojos" class="form-control" id="ojos">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col col-12 col-sm-6 col-md-8">
-                        <div class="row">
-                            <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body ">
-                                        <h5 class="card-title">Max</h5>
-                                        <p class="card-text">
-                                            Some quicktitle and make up the bulk of the card's content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Dante</h5>
-                                        <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title
-                                            and make up the bulk of the card's content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Clarita</h5>
-                                        <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf
-                                            wef wef ew fe fo build on the card title and make up the bulk of the card's
-                                            content.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <div class="col col-12col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Rosita</h5>
-                                        <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt
-                                            veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit?
-                                            Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos
-                                            debitis facilis blanditiis accusantium
-                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam
-                                            consequatur quam. Officiis quidem cupiditate ipsum!
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body ">
-                                        <h5 class="card-title ">Catalina</h5>
-                                        <p class="card-text ">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores
-                                            pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius
-                                            in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio
-                                            quia ipsam qui porro, totam
-                                            repudiandae quis
-                                            necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi
-                                            officiis dicta perferendis dolore incidunt officia aut.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block ">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
-                                    <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
-                                    <div class="card-body">
-                                        <h5 class="card-title ">Juan Carlos</h5>
-                                        <p class="card-text">
-                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                            amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora
-                                            repudiandae veritatis hic dolorem nemo odio, repellat quo tempore
-                                            dignissimos animi.
-                                        </p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-12 col-sm-12">
+                        <div class="card card-body p-3 mb-2 bg-light text-dark">
+                            <h3>Raza: Bulldog Francés</h3>
+                            <hr class="my-4">
+                            <ul class="">
+                                <li class=".bg-light list-inline-item">
+                                    <p>Color de pelo: Negro con manchas blancas</p>
+                                </li>
+                                <br>
+                                <li class=".bg-light list-inline-item">
+                                    <p>Color de ojos: Grises</p>
+                                </li>
+                            </ul>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Descripción</strong></p>
+                            <ul class="list-unstyled list-inline d-flex justify-content-between mb-0">
+                                <li class="list-inline-item">
+                                    <p class="text-muted">Es un cachorro muy dulce que te enamorara al instante. Esta raza se caracteriza por ser sumamente dócil con todos los integrantes de la familia especialmente los más peques.</p>
+                                </li>
+                            </ul>
+                            <hr class="my-4">
+                            <p class="lead"><strong>Datos del Contacto</strong></p>
+                            <ul class=".bg-light">
+                                <li class=".bg-light">Nombre<i class=""> </i></li>
+                                <li class=".bg-light">Telefono<i class=""></i></li>
+                                <li class=".bg-light">Email<i class=""></i></li>
+                            </ul>
 
+                            <p class="lead"><strong>Barrio: La Comercial</strong></p>
+                            <hr class="my-4">
+                            <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
                         </div>
                     </div>
-                    <aside class="serchVerticalR col col-12 col-sm-6 col-md-2 col-lg-2">
-                        <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
-                                class="card-img-top" alt="... "></a>
-                        <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
-                                class="card-img-top" alt="... "></a>
-                        <hr />
-                    </aside>
+                </div>
+                <div class="row">
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                        <div class="card">
+                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg" class="card-img-top" alt="imagen de mascota"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section>
+
+
+        </section>
+
+        <section>
+
+
+
+            <!-- The Modal -->
+            <div class="modal" id="miModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <img src="assets/carr_01.jpg" class="card-img-top" alt="... ">
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </section>
-    </main>
-    <!-- fin Main -->
 
-    <!-- footer -->
+    </main>
     <footer>
         <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
             <span class="second-line">All Rights Reserved.</span>
