--- a/list.html
+++ b/list.html
@@ -18,8 +18,7 @@
     <header></header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
-                width="70"></span>
+        <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53" width="70"></span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -129,8 +128,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Dante</h5>
                                         <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title
-                                            and make up the bulk of the card's content.
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the bulk of the card's content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -142,27 +140,21 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Clarita</h5>
                                         <p class="card-text">
-                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf
-                                            wef wef ew fe fo build on the card title and make up the bulk of the card's
-                                            content.
+                                            Some quick example tdfdfg dfg dfgdfg dfgfd gext ter wefwef wefew wf we f ewf wef wef ew fe fo build on the card title and make up the bulk of the card's content.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col col-12col-md-6 col-lg-4">
+                            <div class="col col-12 col-md-6 col-lg-4">
                                 <div class="card">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Rosita</h5>
                                         <p class="card-text">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt
-                                            veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit?
-                                            Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos
-                                            debitis facilis blanditiis accusantium
-                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam
-                                            consequatur quam. Officiis quidem cupiditate ipsum!
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci incidunt veniam quibusdam corporis fugit nulla doloribus dolore dolores, ab odit? Quas vitae repellendus reprehenderit, alias maiores numquam tenetur quos debitis facilis blanditiis accusantium
+                                            eligendi quasi rerum perspiciatis dolorem, ut natus earum fuga velit, ullam consequatur quam. Officiis quidem cupiditate ipsum!
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -174,13 +166,8 @@
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
                                         <p class="card-text ">
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores
-                                            pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius
-                                            in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio
-                                            quia ipsam qui porro, totam
-                                            repudiandae quis
-                                            necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi
-                                            officiis dicta perferendis dolore incidunt officia aut.
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi maiores pariatur, praesentium dolorem accusantium culpa a reprehenderit libero eius in, ab perspiciatis non consequuntur fugiat quam provident earum magni optio quia ipsam qui porro, totam
+                                            repudiandae quis necessitatibus nobis? Totam, maiores nihil eveniet tenetur earum, modi officiis dicta perferendis dolore incidunt officia aut.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block ">Ver</a>
                                     </div>
@@ -192,10 +179,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
                                         <p class="card-text">
-                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                            amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora
-                                            repudiandae veritatis hic dolorem nemo odio, repellat quo tempore
-                                            dignissimos animi.
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus amet harum vero nulla quibusdam alias dolorum ipsum possimus tempora repudiandae veritatis hic dolorem nemo odio, repellat quo tempore dignissimos animi.
                                         </p>
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
@@ -206,11 +190,9 @@
                     </div>
                     <aside class="serchVerticalR col col-12 col-sm-6 col-md-2 col-lg-2">
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_01.jpg" class="card-img-top" alt="... "></a>
                         <hr />
-                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg"
-                                class="card-img-top" alt="... "></a>
+                        <a href="https://freshpet.com/" target="_blank"><img src="assets/publicidad_02.jpg" class="card-img-top" alt="... "></a>
                         <hr />
                     </aside>
                 </div>
