--- a/testing.html
+++ b/testing.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col col-12 col-sm-12">
-                        <div class="card card-body p-3 mb-2 bg-light text-dark">
+                        <div class="card contFicha">
                             <h3>Raza: Bulldog Francés</h3>
                             <hr class="my-4">
                             <ul class="">
