--- a/list.html
+++ b/list.html
@@ -111,7 +111,7 @@
                     <div class="col col-12 col-sm-6 col-md-8">
                         <div class="row">
                             <div class="col col-12 col-sm-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_10.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title">Max</h5>
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                             <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_06.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Dante</h5>
@@ -135,7 +135,7 @@
                                 </div>
                             </div>
                             <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_07.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Clarita</h5>
@@ -148,7 +148,7 @@
                             </div>
 
                             <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_11.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title">Rosita</h5>
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                             <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body ">
                                         <h5 class="card-title ">Catalina</h5>
@@ -174,7 +174,7 @@
                                 </div>
                             </div>
                             <div class="col col-12 col-md-6 col-lg-4">
-                                <div class="card">
+                                <div class="card cardLista">
                                     <img src="assets/dog_09.jpg" class="card-img-top" alt="... ">
                                     <div class="card-body">
                                         <h5 class="card-title ">Juan Carlos</h5>
