--- a/luis.html
+++ b/luis.html
@@ -17,7 +17,7 @@
 
     <header></header>
     <!-- NAVBAR -->
-    
+
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="53"
                 width="70"></span>
@@ -92,70 +92,93 @@
                                 <p class="lead"><strong>Barrio: La Comercial</strong></p>
                                 <hr class="my-4">
                                 <button type="button" class="btn btn-success btn-block btn">Adoptar</button>
+                                
 
-                                <div class="row">
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_01.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_02.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_03.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_04.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_01.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                                        <div class="card">
-                                            <a href="#" data-toggle="modal" data-target="#miModal"><img
-                                                    src="assets/carr_02.jpg" class="card-img-top"
-                                                    alt="imagen de mascota"></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <footer>
-                                    <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com"
-                                            target="_blank">Luis Besil</a>.
-                                        <span class="second-line">All Rights Reserved.</span>
-                                    </p>
-                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="miniaturas">
+                    <div class="row">
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_01.jpg" class="card-img-top"
+                                        alt="imagen de mascota"></a>
+                            </div>
+                        </div>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_02.jpg" class="card-img-top"
+                                        alt="imagen de mascota"></a>
+                            </div>
+                        </div>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_03.jpg" class="card-img-top"
+                                        alt="imagen de mascota"></a>
+                            </div>
+                        </div>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_04.jpg" class="card-img-top"
+                                        alt="imagen de mascota"></a>
+                            </div>
+                        </div>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_01.jpg" class="card-img-top"
+                                        alt="imagen de mascota"></a>
+                            </div>
+                        </div>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img
+                                        src="assets/carr_02.jpg" class="card-img-top"
+                                        alt="imagen de mascota">
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
 
+            </div>
+        </section>
 
+        <section>
+            <!-- The Modal -->
+            <div class="modal" id="miModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <img src="assets/carr_01.jpg" class="card-img-top" alt="... ">
+                        </div>
 
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
 
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
-
+    <footer>
+        <p class="copyright">Copyright © 2019 <a href="mailto:l.besil@gmail.com" target="_blank">Luis Besil</a>.
+            <span class="second-line">All Rights Reserved.</span>
+        </p>
+    </footer>
 
 
 </body>
