--- a/testing.html
+++ b/testing.html
@@ -58,7 +58,8 @@
                 <div class="row">
                     <div class="col col-12 col-sm-12">
                         <div class="card">
-                            <img class="imagen card-img-top" src="assets/cat-1045782_1920.jpg" style="width:800px" alt="imagen de fondo">
+                            <img class="imagen card-img-top" src="assets/cat-1045782_1920.jpg" style="width:300px"
+                                alt="imagen de fondo">
                             <div class="card-img-overlay">
                                 <h3>Raza: Bulldog Francés</h3>
                                 <hr class="my-4">
@@ -95,41 +96,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                <div class="miniaturas d-none d-md-block">
+                    <div class="row">
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_03.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_04.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_01.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
-                        <div class="card">
-                            <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
-                                    class="card-img-top" alt="imagen de mascota"></a>
+                        <div class="col col-4 col-sm-6 col-md-2 col-lg-2">
+                            <div class="card">
+                                <a href="#" data-toggle="modal" data-target="#miModal"><img src="assets/carr_02.jpg"
+                                        class="card-img-top" alt="imagen de mascota"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
